# ChangeLog for dev-perl/module-build
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/module-build/ChangeLog,v 1.62 2007/04/16 13:11:41 mcummings Exp $

*module-build-0.28.07 (16 Apr 2007)

  16 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +module-build-0.28.07.ebuild:
  Version bump

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  module-build-0.28.05.ebuild:
  Stable on ppc64

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  module-build-0.28.06.ebuild:
  Marking sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  module-build-0.28.06.ebuild:
  Marking stable amd64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> module-build-0.28.05.ebuild:
  Stable on x86, bug #169152.

*module-build-0.28.06 (23 Jan 2007)

  23 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +module-build-0.28.06.ebuild:
  Version bump

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -module-build-0.25.ebuild, -module-build-0.26.10.ebuild,
  -module-build-0.26.11.ebuild, module-build-0.28.ebuild,
  module-build-0.28-r1.ebuild, -module-build-0.28.01.ebuild,
  module-build-0.28.05.ebuild:
  Ebuild maintenance

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  module-build-0.28.05.ebuild:
  Stable on hppa

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  module-build-0.28.05.ebuild:
  ppc stable

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  module-build-0.28.05.ebuild:
  Mark 0.28.05 stable on ia64

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  module-build-0.28.05.ebuild:
  Marking amd64 stable

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  module-build-0.28.05.ebuild:
  Marking sparc stable

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> module-build-0.28-r1.ebuild:
  Marked stable on mips.

*module-build-0.28.05 (21 Aug 2006)

  21 Aug 2006; Yuval Yaari <yuval@gentoo.org> +module-build-0.28.05.ebuild:
  Version bump
