@@ -1,10 +1,6 @@
-DIST Module-Build-0.2805.tar.gz 185749 RMD160 82cb42062df7f97cf87bee74e07f834df2909c1f SHA1 fbb648c48a0a28a3f8102c77da3b781ef1b630e3 SHA256 8fd609d1e6b460b5c95ad5612cb823aa863d51360ed55caea987909a9bab50f5
 DIST Module-Build-0.2806.tar.gz 189963 RMD160 4e3d8e3cb19725daa638732cfcadd3565f853a1c SHA1 f74694f5e88069c52009587f876077b9ee7f0531 SHA256 e37767199d6ee5af4c7ce267bcf95767cac41a7ce193a9868afeb2599c3385b7
 DIST Module-Build-0.2807.tar.gz 194196 RMD160 7dd0d894393debc5b9cda82d2d7d483923df4beb SHA1 fe2b8a26737cda0243d70083be2a01c5135fb5f4 SHA256 eba3eab53cfefd16769cdc2b7ae34b447d9b0c8eb8097af8463d921587f76bab
-EBUILD module-build-0.28.05.ebuild 955 RMD160 8bfec0fca28d4dff2a6a93c5d183a61f5f784f24 SHA1 e43cf16d3484c66e943dcc38f12823f2e65dd9f8 SHA256 c9c3beef23810d6b18f495c14610ae28e34a225430f95a4038ea1deddc07f4d4
-MD5 2ae4cad898a9b2959829d4ee2ef56da3 module-build-0.28.05.ebuild 955
-RMD160 8bfec0fca28d4dff2a6a93c5d183a61f5f784f24 module-build-0.28.05.ebuild 955
-SHA256 c9c3beef23810d6b18f495c14610ae28e34a225430f95a4038ea1deddc07f4d4 module-build-0.28.05.ebuild 955
+DIST Module-Build-0.2808.tar.gz 196525 RMD160 eb156aef5b9bef9b56068abeb29f2596c33f92ec SHA1 cee04451c269a6f2fe09fb028423b7f829584e05 SHA256 1b49bb26aef78c4a90bdb01c0ece4b033cf6dac2ad5e95e8211b59f188bb1fc1
 EBUILD module-build-0.28.06.ebuild 957 RMD160 381c5e2eee92615205b6b72eaa980806b834c44e SHA1 e3339cce86da0489ea06a3b299101f41f10b8dbf SHA256 f91f7602f91a1dee14626387c9b6c89580f0eb8292938ae71f94d245e4dda6b9
 MD5 299212b207062512016c6069b0cd717a module-build-0.28.06.ebuild 957
 RMD160 381c5e2eee92615205b6b72eaa980806b834c44e module-build-0.28.06.ebuild 957
@@ -13,20 +9,24 @@ EBUILD module-build-0.28.07.ebuild 1011 RMD160 95257493accce9104f7fe5d16bb95c140
 MD5 6048915cfccd66608be8ec3967c18434 module-build-0.28.07.ebuild 1011
 RMD160 95257493accce9104f7fe5d16bb95c140d27c126 module-build-0.28.07.ebuild 1011
 SHA256 93fafdadddf28aa4aec0619daf838914bd150fb3eeb814efcbbcf585f2c0e057 module-build-0.28.07.ebuild 1011
-MISC ChangeLog 8297 RMD160 7f17a8999f6f3bcf710e04331c0fcc8fcfd221e5 SHA1 3e9fe993e2fe549e906e4e42931d5b01e8cd3302 SHA256 b97d7a08bdd1b6d6351760886df8f6b231fc21e6cb124dbceafa0c3d327154b6
-MD5 65e1db9be06dfd847cf2190aa04037a9 ChangeLog 8297
-RMD160 7f17a8999f6f3bcf710e04331c0fcc8fcfd221e5 ChangeLog 8297
-SHA256 b97d7a08bdd1b6d6351760886df8f6b231fc21e6cb124dbceafa0c3d327154b6 ChangeLog 8297
+EBUILD module-build-0.28.08.ebuild 1002 RMD160 7594b6b7ea3ba3d57338032cec7639262d1c519a SHA1 b7dd75b16d461cfacecdce5d1b3cd1187e8dffdd SHA256 ab4b6c91926f2d23dff901d81bc168afd27c0a2d9d799b9ee00ff6a6010b8814
+MD5 c32d7f53c4bc813309ef514e4ea2a4a9 module-build-0.28.08.ebuild 1002
+RMD160 7594b6b7ea3ba3d57338032cec7639262d1c519a module-build-0.28.08.ebuild 1002
+SHA256 ab4b6c91926f2d23dff901d81bc168afd27c0a2d9d799b9ee00ff6a6010b8814 module-build-0.28.08.ebuild 1002
+MISC ChangeLog 8437 RMD160 a70725c9168acc5056055a65b5a7ba0c9184ef73 SHA1 2bc07e2683dcd3aa2d24cc491902d87437a2998f SHA256 b04b482e1b517ca6578a7622723335fce8e8766724b94e791c69f28eb5711f8f
+MD5 49f4745aa73f61ab95735d9c8a736b44 ChangeLog 8437
+RMD160 a70725c9168acc5056055a65b5a7ba0c9184ef73 ChangeLog 8437
+SHA256 b04b482e1b517ca6578a7622723335fce8e8766724b94e791c69f28eb5711f8f ChangeLog 8437
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
 SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata.xml 305
-MD5 70fcab80439af074d0073c8d3b8789ab files/digest-module-build-0.28.05 259
-RMD160 c57a303a6cf702ab60f6ff83758e0972b819af4d files/digest-module-build-0.28.05 259
-SHA256 85f29987739f458786307c1d3f06108511683e2971fd187a64184a82826110ae files/digest-module-build-0.28.05 259
 MD5 17e9ae03c842da4c26d522cb384f779a files/digest-module-build-0.28.06 259
 RMD160 3f8fa61f23b5e99a8d0d5e887b213989306efbab files/digest-module-build-0.28.06 259
 SHA256 42b308f6846faffbc2b298740cf69fce077bf30d4867870553f528d5eb267576 files/digest-module-build-0.28.06 259
 MD5 cc79f2c11ee17df0c40e327e63ac112f files/digest-module-build-0.28.07 259
 RMD160 ff9e5f0ffb09e8d770f7bcf231fad516388522e2 files/digest-module-build-0.28.07 259
 SHA256 c76503e47214727e34789537b8b16085213d8a21efe5763ba1238bf11dcbedca files/digest-module-build-0.28.07 259
+MD5 e9247b7eb61e6c404fbb6e61f08ce9f2 files/digest-module-build-0.28.08 259
+RMD160 13ad53b687238ce76622776933a483b3b514fdd3 files/digest-module-build-0.28.08 259
+SHA256 132b32682028d393cd35e470cad7070b61ab62060a264ac140fbe4656b2c28a4 files/digest-module-build-0.28.08 259
