@@ -1,3 +1,0 @@
-MD5 598bb59b86c2c4842eeffb03392fab5b Module-Build-0.2805.tar.gz 185749
-RMD160 82cb42062df7f97cf87bee74e07f834df2909c1f Module-Build-0.2805.tar.gz 185749
-SHA256 8fd609d1e6b460b5c95ad5612cb823aa863d51360ed55caea987909a9bab50f5 Module-Build-0.2805.tar.gz 185749
