@@ -1,0 +1,3 @@
+MD5 b8e457b1a4b72c46bcec3d9bce87329b Module-Build-0.2808.tar.gz 196525
+RMD160 eb156aef5b9bef9b56068abeb29f2596c33f92ec Module-Build-0.2808.tar.gz 196525
+SHA256 1b49bb26aef78c4a90bdb01c0ece4b033cf6dac2ad5e95e8211b59f188bb1fc1 Module-Build-0.2808.tar.gz 196525
