@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/module-build
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/module-build/ChangeLog,v 1.62 2007/04/16 13:11:41 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/module-build/ChangeLog,v 1.63 2007/04/29 22:00:40 mcummings Exp $
+
+*module-build-0.28.08 (29 Apr 2007)
+
+  29 Apr 2007; Michael Cummings <mcummings@gentoo.org>
+  +module-build-0.28.08.ebuild:
+  Version bump
 
 *module-build-0.28.07 (16 Apr 2007)
 
